--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.56.1"
   }
 }
